--- a/co-vo-be-nho-cua-tong-tai-ac-ma.html
+++ b/co-vo-be-nho-cua-tong-tai-ac-ma.html
@@ -21,7 +21,16 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0"
         nonce="PHmz7jmZ"></script>
-</head>
+    
+</head><!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XW4DDBD7ET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XW4DDBD7ET');
+</script>
 
 <body>
     <!--navigation-->
