--- a/tang-vu.html
+++ b/tang-vu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tang Vũ | Truyện Ngôn tình Cổ đại hot nhất</title>
-    <meta name="description" content="Tang Vũ là một Truyện Ngôn tình Cổ đại khiến bạn đọc say mê">
+    <meta name="description" content="Tang Vũ Truyện Cổ đại Ngược đang thịnh hành">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
