--- a/trang-chu.html
+++ b/trang-chu.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <!--chi muc google -->
     <meta name="google-site-verification" content="_Ju3_0lSwMjzg4qTa6ocmD3NQoOVEMAO9Fhw3t-86ZE" />
-    
+   
     <title>Phù Vân Các | Đọc Truyện Online, Truyện Ngôn Tình, Tiên Hiệp, Xuyên Không hay nhất</title>
     <meta name="description"
-        content="Cùng Đọc Truyện Online, Truyện Ngôn Tình, Tiên Hiệp, Xuyên Không được cập nhật mới nhất, hot nhất hiện nay"
+        content="Cùng Đọc Truyện Online, Truyện Ngôn Tình, Tiên Hiệp, Xuyên Không được cập nhật mới nhất, hot nhất hiện nay">
         <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
