--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="trang-chu.html" aria-current="page">
+                <a class="navbar-brand" href="index.html" aria-current="page">
                     <img class="img-fluid" alt="Phù Vân Các" src="common/img/page-img/logo.png" width="50px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -48,7 +48,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item"><a class="nav-link" href="trang-chu.html"><i class="fas fa-home"></i> Trang
+                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i> Trang
                                 chủ</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
@@ -73,7 +73,7 @@
     </header>
     <!--main-->
     <div class="container">
-        <hr style="margin: 10px 0px 20px 0px;">
+        <hr style="margin: 10px 0px 20px 0px;">inde
         <!--slide hot top-->
         <section id="storyCarousel" class="carousel slide hot-slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
