--- a/tang-vu-chuong-1.html
+++ b/tang-vu-chuong-1.html
@@ -38,7 +38,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="trang-chu.html" aria-current="page">
+                <a class="navbar-brand" href="index.html" aria-current="page">
                     <img class="img-fluid" alt="Phù Vân Các" src="common/img/page-img/logo.png" width="50px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -47,7 +47,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item"><a class="nav-link" href="trang-chu.html"><i class="fas fa-home"></i> Trang
+                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i> Trang
                                 chủ</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
@@ -79,7 +79,7 @@
                 <div class="story-detail">
                     <div class="link-to-story">
                         <ul>
-                            <li><a href="trang-chu.html"><i class="fas fa-home"></i> Trang chủ</a></li>
+                            <li><a href="index.html"><i class="fas fa-home"></i> Trang chủ</a></li>
                             <li>»</li>
                             <li><a href="tang-vu.html">Tang Vũ</a></li>
                             <li>»</li>
