--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
     <!--main-->
     <div class="container">
-        <hr style="margin: 10px 0px 20px 0px;">inde
+        <hr style="margin: 10px 0px 20px 0px;">
         <!--slide hot top-->
         <section id="storyCarousel" class="carousel slide hot-slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
