--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!--chi muc google -->
     <meta name="google-site-verification" content="_Ju3_0lSwMjzg4qTa6ocmD3NQoOVEMAO9Fhw3t-86ZE" />
    
-    <title>Phù Vân Các | Đọc Truyện Online, Truyện Ngôn Tình, Tiên Hiệp, Xuyên Không hay nhất</title>
+    <title>Phù Vân Các | Đọc Truyện online mới nhất, hay nhất hiện nay được cập nhật nhanh chóng, hỗ trợ đọc truyện trên máy tính và di động.</title>
     <meta name="description"
-        content="Cùng Đọc Truyện Online, Truyện Ngôn Tình, Tiên Hiệp, Xuyên Không được cập nhật mới nhất, hot nhất hiện nay">
+        content="Trang web truyện Online mới nhất, đọc truyện ngôn tình hay, truyện full, truyện tiên hiệp, truyện ngược sủng liên tục cập nhật mỗi ngày.">
         <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
