--- a/tang-vu.html
+++ b/tang-vu.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tang Vũ | Truyện Ngôn tình Cổ đại hot nhất</title>
-    <meta name="description" content="Tang Vũ Truyện Cổ đại Ngược đang thịnh hành">
+    <title>Tang Vũ - Thanh Hồ Nương Tử</title>
+    <meta name="description" content="Đọc truyện Tang Vũ của tác giả Thanh Hồ Nương Tử, đã full (hoàn thành)">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
