--- a/tang-vu-chuong-1.html
+++ b/tang-vu-chuong-1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tang Vũ - Chương 1 | Truyện Ngôn tình Cổ đại hot nhất</title>
+    <title>Tang Vũ - Chương 1</title>
     <meta name="description" content="Tang Vũ Truyện Cổ đại Ngược đang thịnh hành">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
