--- a/co-vo-be-nho-cua-tong-tai-ac-ma.html
+++ b/co-vo-be-nho-cua-tong-tai-ac-ma.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma | Truyện Ngôn tình Sắc đang hot nhất</title>
-    <meta name="description" content="Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma là một trong những truyện Ngôn tình Sắc được nhiều bạn đọc chào đón">
+    <title>Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma - Nguyễn Ngọc Trân Quế</title>
+    <meta name="description" content="Đọc truyện Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma của tác giả Nguyễn Ngọc Trân Quế luôn cập nhật chương mới đầy đủ.">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
