--- a/co-vo-be-nho-cua-tong-tai-ac-ma-chuong-15.html
+++ b/co-vo-be-nho-cua-tong-tai-ac-ma-chuong-15.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-     <title>Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma - Chương 15</title>
-    <meta name="description" content="Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma truyện Sắc đang top ngôn tình thịnh hành hiện nay.">
+     <title>Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma - Chương 15 | Truyện Ngôn tình Sắc đang hot nhất</title>
+    <meta name="description" content="Cô Vợ Nhỏ Bé Của Tổng Tài Ác Ma là một trong những truyện Ngôn tình Sắc được nhiều bạn đọc chào đón">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
@@ -60,7 +60,7 @@
                                 <li><a class="dropdown-item" href="#">Linh dị</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="lien-he.html">Liên hệ</a></li>
                     </ul>
                     <form class="d-flex form-search-top">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
