--- a/tang-vu-chuong-1.html
+++ b/tang-vu-chuong-1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tang Vũ - Chương 1</title>
+    <title>Tang Vũ - Chương 1 | Truyện Ngôn tình Cổ đại hot nhất</title>
     <meta name="description" content="Tang Vũ Truyện Cổ đại Ngược đang thịnh hành">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,7 +60,7 @@
                                 <li><a class="dropdown-item" href="#">Linh dị</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="lien-he.html">Liên hệ</a></li>
                     </ul>
                     <form class="d-flex form-search-top">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
