--- a/danh-sach.html
+++ b/danh-sach.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ngôn tình | Những truyện mới cập nhật hay nhất</title>
-    <meta name="description" content="Danh sách truyện Ngôn tình tình cảm hắp dẫn với danh sách truyện online hay và cập nhật nhanh nhất tới bạn đọc">
+    <meta name="description" content="Top Ngôn tình hay nhất, Danh sách truyện hot nhất hiện nay">
     <meta name="author" content="Phù Vân Tiểu Sinh Lò Văn Sậm">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--bootstrap 5-->
@@ -57,7 +57,7 @@
                                 <li><a class="dropdown-item" href="#">Linh dị</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="lien-he.html">Liên hệ</a></li>
                     </ul>
                     <form class="d-flex form-search-top">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
