--- a/danh-sach.html
+++ b/danh-sach.html
@@ -250,7 +250,7 @@
                 <hr style="margin: 5px 0px;">
                 <div class="row">
                     <div class="col-6 category-sidebar-name">
-                        <a href=danh-sach.htmll">» Ngôn tình</a>
+                        <a href=danh-sach.html">» Ngôn tình</a>
                     </div>
                     <div class="col-6 category-sidebar-name">
                         <a href="#">» Xuyên không</a>
