--- a/lien-he.html
+++ b/lien-he.html
@@ -94,7 +94,9 @@
                           <p> <b><a href="index.html">Phù Vân Các </a></b> – Trang đọc truyện online, thường xuyên cập nhật những bộ truyện hay nhất thuộc
                             các thể loại đặc sắc như: truyện ngôn tình, truyện tiên hiệp, truyện kiếm hiệp, truyện đam
                             mỹ, light novel…</p> 
-                            <p>Truyện được sưu tầm từ các nguồn diễn đàn, blog truyện trên internet. Mọi vấn đề vi phạm bản quyền vui lòng liên hệ:</p>
+                            <p>Truyện được sưu tầm từ các nguồn diễn đàn, blog truyện trên internet. Mọi vấn đề vi phạm bản quyền vui lòng
+                                liên hệ emai: samlvfx10253@funix.edu.vn.
+                           </p>
                         </div>
                         <div class="contact-col">
                             <div class="row">
