--- a/lien-he.html
+++ b/lien-he.html
@@ -95,7 +95,8 @@
                             các thể loại đặc sắc như: truyện ngôn tình, truyện tiên hiệp, truyện kiếm hiệp, truyện đam
                             mỹ, light novel…</p> 
                             <p>Truyện được sưu tầm từ các nguồn diễn đàn, blog truyện trên internet. Mọi vấn đề vi phạm bản quyền vui lòng
-                                liên hệ emai: samlvfx10253@funix.edu.vn.
+                                liên hệ emai: 
+                                samlvfx10253@funix.edu.vn
                            </p>
                         </div>
                         <div class="contact-col">
